--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -59,6 +59,9 @@
         <a href="../post/how-to" class="navbar-item">
           How To
         </a>
+		<a href="../note/Public/world/world" class="navbar-item">
+		  World
+		</a>
         <a href="https://github.com/Jekyll-Garden/jekyll-garden.github.io" target="_blank" class="navbar-item">
           Github
         </a>
