--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -56,6 +56,9 @@
         <a href="{{'/notes' | relative_url}}" class="navbar-item">
           Demo Feed
         </a>
+		<a href="{{'/pcs' | relative_url}}" class="navbar-item">
+          PCs Feed
+        </a>
         <a href="../post/how-to" class="navbar-item">
           How To
         </a>		
